# juicysfplugin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: android.yml  cmake.yml  desktop.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/debug/res/values/: string.xml
android/app/src/main/: AndroidManifest.xml
scripts/linux/: build-fluidsynth.sh  build.sh
scripts/win/: build-fluidsynth-x64.bat  build-x64.bat  build-x86.bat  debug-x64.bat  debug-x86.bat  post_build.bat
scripts/win/android/: build_android.bat  build_android_lib.bat
src/: GuiConstants.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
